Avoid math overflow on mobile devices

--- a/docs/css/cookipedia.css
+++ b/docs/css/cookipedia.css
@@ -50,3 +50,7 @@ ol.ref ul {
 .MathJax {
   font-size: 1.1em !important;
 }
+.overflow-y-container {
+  overflow-y: hidden;
+  max-width: 100%;
+}
